LOP as title. fix font size and spacing between links to account for h1s now being used in title view. #2033

--- a/openscholar/themes/hwpi_classic/css/hwpi_classic.css
+++ b/openscholar/themes/hwpi_classic/css/hwpi_classic.css
@@ -150,6 +150,8 @@ margin-left:6em;
     font-size: 13px;
 }
 
+.block-boxes-os_sv_list_box .sv-list-view-title h1 {font-family:arial;}
+
 /* Border control */
 .not-front.two-sidebars #content-column .content-inner {
 	border-right: 1px solid #e7e7e7;
