--- a/openscholar/themes/os_basetheme/css/global.base.css
+++ b/openscholar/themes/os_basetheme/css/global.base.css
@@ -179,7 +179,9 @@ h4 a {
     font-size: 1.3em;
 }
 
-.block-boxes-os_sv_list_box h1 {font-weight:normal;font-size:1em;}
+.block-boxes-os_sv_list_box .sv-list-view-title .node {margin-bottom:12px;}
+
+.block-boxes-os_sv_list_box .sv-list-view-title h1 {font-weight:normal;font-size:1em !important;}
 
 
 
